--- a/baby.html
+++ b/baby.html
@@ -23,11 +23,14 @@
 
 <body style="background-color: black">
 <div id="main-container">
-    <h1 style="color: white">Coolest Mint Ever</h1>
+    <h1 style="color: white">test</h1>
 
     <!--  Mint button gets injected here  -->
     <div id="mint-button-container"></div>
     <div id="mint-counter"></div>
+
+<!-- Add the logo -->
+    <img id="logo" src="https://media.discordapp.net/attachments/1026299044424863815/1033929436489318410/meta_penguins_1.png" alt="Logo">
 </div>
 </body>
 </html>
